--- a/index.html
+++ b/index.html
@@ -8,8 +8,38 @@
     <title>Founders and Cookers</title>
   </head>
   <body>
-    <input type="search" />
-    <button>Search</button>
+    <button class="sign-in btn">Sign In</button>
+
+    <div class="modal">
+      <div class="modal__header">
+        <h2 class="modal__title">Sign In</h2>
+        <i class="modal__close fa-solid fa-xmark"></i>
+      </div>
+      <form class="modal__form" onsubmit="return false">
+        <label class="modal__label" for="name">Username</label>
+        <input
+          class="modal__input"
+          id="username"
+          type="text"
+          placeholder="Your username"
+          required
+        />
+        <label class="modal__label" for="question">Password</label>
+        <input
+          class="modal__input"
+          id="password"
+          type="password"
+          placeholder="Your password"
+          required
+        />
+        <button class="modal__button btn" type="button">Sign In</button>
+      </form>
+    </div>
+
+    <div class="search">
+      <input class="search__input" type="search" />
+      <button class="search__button">Search</button>
+    </div>
 
     <section class="recipes">
       <template class="card--template">
@@ -19,6 +49,13 @@
         </div>
       </template>
     </section>
+
     <script type="module" src="main.js"></script>
+
+    <!-- Font Awesome Icon Library -->
+    <script
+      src="https://kit.fontawesome.com/248cd170f1.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
