Add changes to sign in button styling

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Founders and Cookers</title>
   </head>
   <body>
-    <button class="sign-in btn">Sign In</button>
+    <nav>
+      <button class="btn sign-in">Sign In</button>
+    </nav>
 
     <div class="modal">
       <div class="modal__header">
