--- a/index.html
+++ b/index.html
@@ -5,20 +5,71 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Founders and Cookers</title>
+    <title>Lasagna-me</title>
   </head>
   <body>
-    <input type="search" />
-    <button>Search</button>
+    <!-- Navbar (sit on top) -->
+<div class="w3-top">
+  <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
+    <a href="#home" class="w3-bar-item w3-button">LAZAGNA-ME</a>
+    <!-- Right-sided navbar links. Hide them on small screens -->
+    <div class="w3-right w3-hide-small">
+      <a href="#about" class="w3-bar-item w3-button">About</a>
+      <a href="#menu" class="w3-bar-item w3-button">Quick-view</a>
+      <a href="#contact" class="w3-bar-item w3-button">Account</a>
+    </div>
+  </div>
+</div>
 
-    <section class="recipes">
-      <template class="card--template">
-        <div class="card">
-          <img class="card__image" />
-          <h4 class="card__name"></h4>
-        </div>
-      </template>
-    </section>
+<!-- Header -->
+<header class="w3-display-container w3-wide" id="home">
+  <img class="w3-image" src="https://www.w3schools.com/w3images/hamburger.jpg" alt="Hamburger Catering" width="1600" height="800">
+  <div class="w3-display-bottomleft w3-padding-large w3-opacity">
+    <h1 class="w3-xxlarge">Recipe finder&binder </h1>
+  </div>
+</header>
+
+<hr>
+<!-- Page content -->
+<div class="w3-content w3-row-padding w3-light-grey w3-padding-64 w3-container" style="max-width:100%">
+  <input type="search" />
+  <button>Search</button>
+</div>
+  <section class="recipes w3-padding-16 w3-center grid-container">
+    <template class="card--template">
+      <div class="card flex">
+        <img class="card__image" />
+        <h4 class="card__name"></h4>
+        <span class="icb-hrt" title="add to favourites" data-role="favourite_insert" data-id="186280" data-type="4"></span>
+      </div>
+    </template>
+  </section>
+  
+  <hr>
+
+  <!-- Quick View Section -->
+  <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container" id="quickview">
+    <div class="w3-col m6 w3-padding-large w3-hide-small">
+     <img src="https://www.w3schools.com/w3images/tablesetting2.jpg" class="w3-round w3-image w3-opacity-min" alt="Table Setting" width="600" height="750">
+    </div>
+    <div class="w3-col m6 w3-padding-large">
+      <h1 class="w3-center">Quick View</h1><br>
+      <h5 class="w3-center">Title</h5>
+      <p class="w3-large">ingredients</p>
+      <p class="w3-large w3-text-grey w3-hide-medium">Instructions: Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod temporincididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    </div>
+  </div>
+  
+
+  
+<!-- End page content -->
+</div>
+
+<!-- Footer -->
+<footer class="w3-center w3-light-grey w3-padding-32">
+  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
+</footer>
+
     <script type="module" src="main.js"></script>
   </body>
 </html>
