--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <title>Founders and Cookers</title>
   </head>
   <body>
-    <button class="sign-in btn">Sign In</button>
+    <nav>
+      <button class="btn sign-in">Sign In</button>
+    </nav>
+    <div class="notifications"></div>
 
     <div class="modal">
       <div class="modal__header">
@@ -32,7 +35,10 @@
           placeholder="Your password"
           required
         />
-        <button class="modal__button btn" type="button">Sign In</button>
+        <div class="modal__buttons-wrapper">
+          <button class="modal__register">Register</button>
+          <button class="modal__sign-in btn" type="button">Sign In</button>
+        </div>
       </form>
     </div>
 
