Add additional info to recipe cards

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 
     <div class="notifications"></div>
 
-
     <div class="modal">
       <div class="modal__header">
         <h2 class="modal__title">Sign In</h2>
@@ -54,6 +53,9 @@
         <div class="card">
           <img class="card__image" />
           <h4 class="card__name"></h4>
+          <ul class="card__ingredients"></ul>
+          <ol class="card__instructions"></ol>
+          <a class="card__see-more">See more</a>
         </div>
       </template>
     </section>
