--- a/index.html
+++ b/index.html
@@ -48,17 +48,16 @@
       <button class="search__button">Search</button>
     </div>
 
-    <section class="recipes">
-      <template class="card--template">
-        <div class="card">
-          <img class="card__image" />
-          <h4 class="card__name"></h4>
-          <ul class="card__ingredients"></ul>
-          <ol class="card__instructions"></ol>
-          <a class="card__see-more">See more</a>
-        </div>
-      </template>
-    </section>
+    <section class="recipes"></section>
+    <template class="card--template">
+      <div class="card">
+        <img class="card__image" />
+        <h4 class="card__name"></h4>
+        <ul class="card__ingredients"></ul>
+        <ol class="card__instructions"></ol>
+        <a class="card__see-more">See more</a>
+      </div>
+    </template>
 
     <script type="module" src="main.js"></script>
 
