Add additional info to recipe cards (#12)
* Add additional info to recipe cards

* Reset recipes container when user performs new search

* Fix typo, where class was missing closing '

* Retrieve ingredients from `ingredients.original` to show quantities

* Add alternative `API_KEY`

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 
     <div class="notifications"></div>
 
-
     <div class="modal">
       <div class="modal__header">
         <h2 class="modal__title">Sign In</h2>
@@ -49,14 +48,16 @@
       <button class="search__button">Search</button>
     </div>
 
-    <section class="recipes">
-      <template class="card--template">
-        <div class="card">
-          <img class="card__image" />
-          <h4 class="card__name"></h4>
-        </div>
-      </template>
-    </section>
+    <section class="recipes"></section>
+    <template class="card--template">
+      <div class="card">
+        <img class="card__image" />
+        <h4 class="card__name"></h4>
+        <ul class="card__ingredients"></ul>
+        <ol class="card__instructions"></ol>
+        <a class="card__see-more">See more</a>
+      </div>
+    </template>
 
     <script type="module" src="main.js"></script>
 
