--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   </section>
 
   <template class="card--template">
-    <div class="card flex">
+    <div class="card">
       <img class="card__image" />
       <h4 class="card__name"></h4>
       <ul class="card__ingredients"></ul>
