Add save button

--- a/index.html
+++ b/index.html
@@ -109,7 +109,12 @@
         <h4 class="card__name"></h4>
         <ul class="card__ingredients"></ul>
         <ol class="card__instructions"></ol>
-        <a class="card__see-more">See more</a>
+        <div class="card__buttons">
+          <a class="card__see-more">See more</a>
+          <button class="card__save">
+            <i class="fa-heart fa-regular"></i>
+          </button>
+        </div>
       </div>
     </template>
 
