--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <!-- Navbar (sit on top) -->
-    <div class="w3-top">
+    <nav class="w3-top">
       <div
         class="w3-bar w3-white w3-padding w3-card"
         style="letter-spacing: 4px"
@@ -27,7 +27,7 @@
           <a href="#sign-in" class="sign-in w3-bar-item w3-button">Sign-in</a>
         </div>
       </div>
-    </div>
+    </nav>
 
     <!-- Header -->
     <header class="w3-display-container w3-wide" id="home">
@@ -80,41 +80,42 @@
     </div>
 
     <!-- Page content -->
-    <div
-      class="w3-content w3-row-padding w3-light-grey w3-padding-64 w3-container"
-      style="max-width: 100%"
-    >
-      <div class="wrapper" id="search">
-        <i class="search-icon fa-solid fa-magnifying-glass"></i>
-        <input
-          placeholder="Search"
-          type="search"
-          class="search search__input"
-        />
-        <button class="search__button button-8">Search</button>
-      </div>
-    </div>
-    <div class="recipes w3-padding-16 w3-center grid-container"></div>
-
-    <template class="card--template">
-      <div class="card flex">
-        <div>
-          <img class="card__image" />
-        </div>
-        <h4 class="card__name"></h4>
-        <ul class="card__ingredients"></ul>
-        <ol class="card__instructions"></ol>
-        <div class="card__buttons">
-          <a class="card__see-more">See more</a>
-          <button class="card__save">
-            <i class="fa-heart fa-regular"></i>
-          </button>
+    <main>
+      <div
+        class="w3-content w3-row-padding w3-light-grey w3-padding-64 w3-container"
+        style="max-width: 100%"
+      >
+        <div class="wrapper" id="search">
+          <i class="search-icon fa-solid fa-magnifying-glass"></i>
+          <input
+            placeholder="Search"
+            type="search"
+            class="search search__input"
+          />
+          <button class="search__button button-8">Search</button>
         </div>
       </div>
-    </template>
+      <div class="recipes w3-padding-16 w3-center grid-container"></div>
 
-    <hr />
+      <template class="card--template">
+        <div class="card flex">
+          <div>
+            <img class="card__image" />
+          </div>
+          <h4 class="card__name"></h4>
+          <ul class="card__ingredients"></ul>
+          <ol class="card__instructions"></ol>
+          <div class="card__buttons">
+            <a class="card__see-more">See more</a>
+            <button class="card__save">
+              <i class="fa-heart fa-regular"></i>
+            </button>
+          </div>
+        </div>
+      </template>
 
+      <hr />
+    </main>
     <!-- Quick View Section -->
     <div
       class="w3-row-padding w3-light-grey w3-padding-64 w3-container"
