Add `inert` by default to the side-bar

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <div class="notifications"></div>
 
-    <div class="side-bar">
+    <div class="side-bar" inert>
       <div class="side-bar__header">
         <h2 class="side-bar__title">Sign In</h2>
         <i class="side-bar__close fa-solid fa-xmark"></i>
