Add `inert` to manage focus of `side-bar` for keyboard users

--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
     <div class="side-bar" inert>
       <div class="side-bar__header">
         <h2 class="side-bar__title">Sign In</h2>
-        <i class="side-bar__close fa-solid fa-xmark"></i>
+        <button class="side-bar__close">
+          <i class="fa-solid fa-xmark"></i>
+        </button>
       </div>
       <div class="side-bar__recipes"></div>
       <div class="side-bar__default-content">
