--- a/index.html
+++ b/index.html
@@ -47,35 +47,35 @@
 
     <div class="notifications"></div>
 
-    <div class="side-bar" inert>
-      <div class="side-bar__header">
-        <h2 class="side-bar__title">Sign In</h2>
-        <button class="side-bar__close">
+    <div class="sidebar" inert>
+      <div class="sidebar__header">
+        <h2 class="sidebar__title">Sign In</h2>
+        <button class="sidebar__close">
           <i class="fa-solid fa-xmark"></i>
         </button>
       </div>
-      <div class="side-bar__recipes"></div>
-      <div class="side-bar__default-content">
-        <form class="side-bar__form" onsubmit="return false">
-          <label class="side-bar__label" for="username">Username</label>
+      <div class="sidebar__recipes"></div>
+      <div class="sidebar__default-content">
+        <form class="sidebar__form" onsubmit="return false">
+          <label class="sidebar__label" for="username">Username</label>
           <input
-            class="side-bar__input"
+            class="sidebar__input"
             id="username"
             type="text"
             placeholder="Your username"
             required
           />
-          <label class="side-bar__label" for="password">Password</label>
+          <label class="sidebar__label" for="password">Password</label>
           <input
-            class="side-bar__input"
+            class="sidebar__input"
             id="password"
             type="password"
             placeholder="Your password"
             required
           />
-          <div class="side-bar__buttons-wrapper">
-            <button class="side-bar__register">Register</button>
-            <button class="side-bar__sign-in btn" type="button">Sign In</button>
+          <div class="sidebar__buttons-wrapper">
+            <button class="sidebar__register">Register</button>
+            <button class="sidebar__sign-in btn" type="button">Sign In</button>
           </div>
         </form>
       </div>
