--- a/index.html
+++ b/index.html
@@ -23,8 +23,6 @@
         <a href="#home" class="w3-bar-item w3-button">LAZAGNA-ME</a>
         <!-- Right-sided navbar links. Hide them on small screens -->
         <div class="w3-right w3-hide-small">
-          <a href="#about" class="w3-bar-item w3-button">About</a>
-          <a href="#menu" class="w3-bar-item w3-button">Quick-view</a>
           <a href="#sign-in" class="sign-in w3-bar-item w3-button">Sign-in</a>
         </div>
       </div>
@@ -107,59 +105,24 @@
           <img class="card__image" />
         </div>
         <h4 class="card__name"></h4>
-        <ul class="card__ingredients"></ul>
-        <ol class="card__instructions"></ol>
+        <div class="card__content">
+          <ul class="card__ingredients"></ul>
         <div class="card__buttons">
           <a class="card__see-more">See more</a>
           <button class="card__save">
             <i class="fa-heart fa-regular"></i>
           </button>
         </div>
+        </div>
       </div>
     </template>
 
     <hr />
 
-    <!-- Quick View Section -->
-    <div
-      class="w3-row-padding w3-light-grey w3-padding-64 w3-container"
-      id="quickview"
-    >
-      <div class="w3-col m6 w3-padding-large w3-hide-small">
-        <img
-          src="https://www.w3schools.com/w3images/tablesetting2.jpg"
-          class="w3-round w3-image w3-opacity-min"
-          alt="Table Setting"
-          width="600"
-          height="750"
-        />
-      </div>
-      <div class="w3-col m6 w3-padding-large">
-        <h1 class="w3-center">Quick View</h1>
-        <br />
-        <h5 class="w3-center">Title</h5>
-        <p class="w3-large">ingredients</p>
-        <p class="w3-large w3-text-grey w3-hide-medium">
-          Instructions: Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum consectetur
-          adipiscing elit, sed do eiusmod temporincididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-          ullamco laboris nisi ut aliquip ex ea commodo consequat.
-        </p>
-      </div>
-    </div>
-
     <!-- Footer -->
     <footer class="w3-center w3-light-grey w3-padding-32">
       <p>
-        Powered by
-        <a
-          href="https://www.w3schools.com/w3css/default.asp"
-          title="W3.CSS"
-          target="_blank"
-          class="w3-hover-text-green"
-          >w3.css</a
-        >
+        2022 All rights reserved. <strong>Lasagna-me</strong>
       </p>
     </footer>
 
