Change Sign in to `<button>`

--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap"
-      rel="stylesheet"
-    />
+    <linkhttp://127.0.0.1:5500/index.html
+    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap"
+    rel="stylesheet" />
     <title>Lasagna-me</title>
   </head>
   <body>
@@ -24,7 +23,7 @@
         <!-- Right-sided navbar links. Hide them on small screens -->
         <div class="w3-right w3-hide-small">
           <a href="#search" class="w3-bar-item w3-button">Search</a>
-          <a href="#sign-in" class="sign-in w3-bar-item w3-button">Sign-in</a>
+          <button class="sign-in w3-bar-item w3-button">Sign-in</button>
         </div>
       </div>
     </nav>
