Search on enter

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <div class="card__content">
           <ul class="card__ingredients"></ul>
         <div class="card__buttons">
-          <a class="card__see-more">See more</a>
+          <a class="card__see-more" target="_blank">See more</a>
           <button class="card__save">
             <i class="fa-heart fa-regular"></i>
           </button>
