Add `autocomplete` to form

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
       </div>
       <div class="sidebar__recipes"></div>
       <div class="sidebar__default-content">
-        <form class="sidebar__form" onsubmit="return false">
+        <form class="sidebar__form" onsubmit="return false" autocomplete="on">
+          <div class="input-errors"></div>
           <label class="sidebar__label" for="username">Username</label>
           <input
             class="sidebar__input"
