Address lighthouse issues and add favicon

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="A website that lets you search and save favourite recipes.">
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -11,6 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap"
       rel="stylesheet"
     />
+    <link rel="apple-touch-icon" href="favicon/apple-touch-icon.png">
     <title>Lasagna-me</title>
   </head>
   <body>
@@ -32,10 +34,9 @@
     <header class="w3-display-container w3-wide" id="home">
       <img
         class="w3-image"
-        src="img/lasagna2.jpg"
+        src="img/hero.jpg"
         alt="Lasagna"
         width="1600"
-        height="800"
       />
       <div class="w3-display-bottomleft w3-padding-large w3-opacity">
         <h1 class="w3-large">RECIPE FINDER & BINDER</h1>
