Add form input errors for screen reader users

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <!-- Right-sided navbar links. Hide them on small screens -->
         <div class="w3-right w3-hide-small">
           <a href="#search" class="w3-bar-item w3-button">Search</a>
-          <button class="sign-in w3-bar-item w3-button">Sign-in</button>
+          <button class="sign-in w3-bar-item w3-button">Sign in</button>
         </div>
       </div>
     </nav>
@@ -56,7 +56,7 @@
       <div class="sidebar__recipes"></div>
       <div class="sidebar__default-content">
         <form class="sidebar__form" onsubmit="return false" autocomplete="on">
-          <div class="input-errors"></div>
+          <ul class="sidebar__errors"></ul>
           <label class="sidebar__label" for="username">Username</label>
           <input
             class="sidebar__input"
