Add styling besides color for `sidebar__errors`

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
             id="username"
             type="text"
             placeholder="Your username"
+            aria-describedby="sidebar__errors"
             required
           />
           <label class="sidebar__label" for="password">Password</label>
@@ -71,6 +72,7 @@
             id="password"
             type="password"
             placeholder="Your password"
+            aria-describedby="sidebar__errors"
             required
           />
           <div class="sidebar__buttons-wrapper">
