--- a/index.html
+++ b/index.html
@@ -17,29 +17,29 @@
   </head>
   <body>
     <!-- Navbar (sit on top) -->
-    <div class="w3-top">
+    <div class="lz-top">
       <div
-        class="w3-bar w3-white w3-padding w3-card"
+        class="lz-bar lz-white lz-padding lz-card"
         style="letter-spacing: 4px"
       >
-        <a href="#home" class="w3-bar-item w3-button">LAZAGNA-ME</a>
+        <a href="#home" class="lz-bar-item lz-button">LAZAGNA-ME</a>
         <!-- Right-sided navbar links. Hide them on small screens -->
-        <div class="w3-right w3-hide-small">
-          <a href="#sign-in" class="sign-in w3-bar-item w3-button">Sign-in</a>
+        <div class="lz-right lz-hide-small">
+          <a href="#sign-in" class="sign-in lz-bar-item lz-button">Sign-in</a>
         </div>
       </div>
     </div>
 
     <!-- Header -->
-    <header class="w3-display-container w3-wide" id="home">
+    <header class="lz-display-container lz-wide" id="home">
       <img
-        class="w3-image"
+        class="lz-image"
         src="img/hero.jpg"
         alt="Lasagna"
         width="1600"
       />
-      <div class="w3-display-bottomleft w3-padding-large w3-opacity">
-        <h1 class="w3-large">RECIPE FINDER & BINDER</h1>
+      <div class="lz-display-bottomleft lz-padding-large lz-opacity">
+        <h1 class="lz-large">RECIPE FINDER & BINDER</h1>
       </div>
     </header>
 
@@ -81,7 +81,7 @@
 
     <!-- Page content -->
     <div
-      class="w3-content w3-row-padding w3-light-grey w3-padding-64 w3-container"
+      class="lz-content lz-row-padding lz-light-grey lz-padding-64 lz-container"
       style="max-width: 100%"
     >
       <div class="wrapper">
@@ -98,7 +98,7 @@
         <button class="search__button button-8">Search</button>
       </div>
     </div>
-    <section class="recipes w3-padding-16 w3-center grid-container"></section>
+    <section class="recipes lz-padding-16 lz-center grid-container"></section>
 
     <template class="card--template">
       <div class="card flex">
@@ -121,7 +121,7 @@
     <hr />
 
     <!-- Footer -->
-    <footer class="w3-center w3-light-grey w3-padding-32">
+    <footer class="lz-center lz-light-grey lz-padding-32">
       <p>
         2022 All rights reserved. <strong>Lasagna-me</strong>
       </p>
