Add responsiveness to multiple screen sizes

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         class="lz-bar lz-white lz-padding lz-card"
         style="letter-spacing: 4px"
       >
-        <a href="#home" class="lz-bar-item lz-button">LAZAGNA-ME</a>
+        <a href="#home" class="home-link lz-bar-item">LAZAGNA-ME</a>
         <!-- Right-sided navbar links. Hide them on small screens -->
         <div class="lz-right lz-hide-small">
           <button
