--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <title>Lasagna-me</title>
   </head>
   <body>
+    <div class="loader"><p>Loading...</p></div>
     <!-- Navbar (sit on top) -->
     <nav class="lz-top">
       <div
