Add notification when no recipes are found

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <title>Lasagna-me</title>
   </head>
   <body>
-    <div class="loader"><p>Loading...</p></div>
+    <div class="loader"><p class="loader__text">Loading...</p></div>
     <!-- Navbar (sit on top) -->
     <nav class="lz-top">
       <div
